# KratosPythonWrapperApplication

./: .gitignore  CMakeLists.txt  LICENSE  README.md
PythonWrapperApplication/: CMakeLists.txt  PythonWrapperApplication.py  python_wrapper_application.cpp  python_wrapper_application.h  python_wrapper_application_variables.cpp  python_wrapper_application_variables.h
PythonWrapperApplication/custom_python/: add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  python_wrapper_python_application.cpp
PythonWrapperApplication/custom_utilities/: python_object_cpp_wrapper_utility.cpp  python_object_cpp_wrapper_utility.h
PythonWrapperApplication/test_examples/test_wrapper/: ProjectParameters.json  StructuralMaterials.json  test_wrapper.py
PythonWrapperApplication/test_examples/test_wrapper.gid/: ProjectParameters.json  test_wrapper.geo  test_wrapper.info  test_wrapper.lin  test_wrapper.mdpa  test_wrapper.msh  test_wrapper.post.lst  test_wrapper.prj  test_wrapper.spd  test_wrapper.time  test_wrapper.vv
PythonWrapperApplication/tests/: generalTests.py  test_PythonWrapperApplication.py  test_python_object_cpp_wrapper_utility.py
